trino templating and new version

--- a/docs/modules/trino/examples/getting_started/code/trino.yaml.j2
+++ b/docs/modules/trino/examples/getting_started/code/trino.yaml.j2
@@ -6,7 +6,7 @@ metadata:
 spec:
   image:
     productVersion: "403"
-    stackableVersion: "0.0.0-dev"
+    stackableVersion: "{{ versions.trino }}"
   clusterConfig:
     catalogLabelSelector:
       matchLabels:
