Add resource quota for smoke tests.

--- a/tests/templates/kuttl/smoke/060-install-zookeeper.yaml.j2
+++ b/tests/templates/kuttl/smoke/060-install-zookeeper.yaml.j2
@@ -16,6 +16,12 @@ spec:
     config:
       logging:
         enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
+      resources:
+        cpu:
+          max: '500m'
+          min: '250m'
+        memory:
+          limit: '0.5Gi'
     roleGroups:
       default:
         replicas: 1
