--- a/tests/templates/kuttl/smoke/040-install-mini-client.yaml.j2
+++ b/tests/templates/kuttl/smoke/040-install-mini-client.yaml.j2
@@ -16,6 +16,13 @@ spec:
       command: ["bash", "-c", "sleep infinity"]
       stdin: true
       tty: true
+      resources:
+        requests:
+          memory: 1Gi
+          cpu: "512m"
+        limits:
+          memory: "128Mi"
+          cpu: "1"
       env:
 {% if test_scenario['values']['openshift'] == 'true' %}
         - name: MINIO_SERVER_ACCESS_KEY
