--- a/tests/templates/kuttl/smoke/090-install-hive.yaml.j2
+++ b/tests/templates/kuttl/smoke/090-install-hive.yaml.j2
@@ -44,6 +44,12 @@ spec:
     config:
       logging:
         enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
+      resources:
+        cpu:
+          max: '1'
+          min: '300m'
+        memory:
+          limit: '512Mi'
     roleGroups:
       default:
         replicas: 2
