--- a/tests/templates/kuttl/smoke/helm-bitnami-minio-values.yaml.j2
+++ b/tests/templates/kuttl/smoke/helm-bitnami-minio-values.yaml.j2
@@ -18,6 +18,10 @@ persistence:
 resources:
   requests:
     memory: 1Gi
+    cpu: "512m"
+  limits:
+    memory: "128Mi"
+    cpu: "1"
 
 auth:
   existingSecret: minio-credentials
