--- a/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
@@ -12,10 +12,7 @@ spec:
       matchLabels:
         trino: trino
     authentication:
-      method:
-        multiUser:
-          userCredentialsSecret:
-            name: trino-users
+      - authenticationClass: trino-users-auth
     authorization:
       opa:
         configMapName: opa
@@ -40,18 +37,25 @@ spec:
         replicas: 1
         config: {}
 ---
+apiVersion: authentication.stackable.tech/v1alpha1
+kind: AuthenticationClass
+metadata:
+  name: trino-users-auth
+spec:
+  provider:
+    static:
+      userCredentialsSecret:
+        name: trino-users
+---
 apiVersion: v1
 kind: Secret
 metadata:
   name: trino-users
 type: kubernetes.io/opaque
 stringData:
-  # admin:admin
-  admin: $2y$10$89xReovvDLacVzRGpjOyAOONnayOgDAyIS2nW9bs5DJT98q17Dy5i
-  # alice:alice
-  alice: $2y$10$HcCa4k9v2DRrD/g7e5vEz.Bk.1xg00YTEHOZjPX7oK3KqMSt2xT8W
-  # bob:bob
-  bob: $2y$10$xVRXtYZnYuQu66SmruijPO8WHFM/UK5QPHTr.Nzf4JMcZSqt3W.2.
+  admin: admin
+  alice: alice
+  bob: bob
 ---
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCatalog
