--- a/tests/templates/kuttl/authentication/create-authentication-classes.yaml.j2
+++ b/tests/templates/kuttl/authentication/create-authentication-classes.yaml.j2
@@ -13,6 +13,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: password-file-users
+  namespace: $NAMESPACE
 stringData:
   test_user_1: test_user_1
   test_user_2: test_user_2
@@ -31,6 +32,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: password-file-users-other
+  namespace: $NAMESPACE
 stringData:
   test_user_1_other: test_user_1_other
   test_user_2_other: test_user_2_other
