--- a/tests/templates/kuttl/logging/trino-vector-aggregator-values.yaml.j2
+++ b/tests/templates/kuttl/logging/trino-vector-aggregator-values.yaml.j2
@@ -26,6 +26,12 @@ customConfig:
       condition: >-
         .pod == "test-trino-coordinator-automatic-log-config-0" &&
         .container == "trino"
+    automaticLogConfigCoordinatorPwFileUpdater:
+      type: filter
+      inputs: [vector]
+      condition: >-
+        .pod == "test-trino-coordinator-automatic-log-config-0" &&
+        .container == "password-file-updater"
     automaticLogConfigCoordinatorVector:
       type: filter
       inputs: [vector]
@@ -62,6 +68,12 @@ customConfig:
       condition: >-
         .pod == "test-trino-coordinator-custom-log-config-0" &&
         .container == "trino"
+    customLogConfigCoordinatorPwFileUpdater:
+      type: filter
+      inputs: [vector]
+      condition: >-
+        .pod == "test-trino-coordinator-custom-log-config-0" &&
+        .container == "password-file-updater"
     customLogConfigCoordinatorVector:
       type: filter
       inputs: [vector]
