--- a/tests/templates/kuttl/smoke/helm-bitnami-minio-values.yaml.j2
+++ b/tests/templates/kuttl/smoke/helm-bitnami-minio-values.yaml.j2
@@ -1,4 +1,32 @@
 ---
+mode: standalone
+disableWebUI: false
+extraEnvVars:
+  - name: BITNAMI_DEBUG
+    value: "true"
+  - name: MINIO_LOG_LEVEL
+    value: DEBUG
+
+#defaultBuckets: hive
+
+provisioning:
+  enabled: true
+  buckets:
+    - name: hive
+  usersExistingSecrets:
+    - centralized-minio-users
+  resources:
+    requests:
+      memory: 1Gi
+      cpu: "512m"
+    limits:
+      memory: "1Gi"
+      cpu: "1"
+  podSecurityContext:
+    enabled: false
+  containerSecurityContext:
+    enabled: false
+
 volumePermissions:
   enabled: false
 
@@ -8,19 +36,25 @@ podSecurityContext:
 containerSecurityContext:
   enabled: false
 
-mode: standalone
-
-disableWebUI: true
-
 persistence:
   enabled: false
 
 resources:
   requests:
     memory: 1Gi
+    cpu: "512m"
+  limits:
+    memory: "1Gi"
+    cpu: "1"
 
 auth:
   existingSecret: minio-credentials
 
 service:
   type: NodePort
+
+{% if test_scenario['values']['s3-use-tls'] == 'true' %}
+tls:
+  enabled: true
+  existingSecret: minio-tls-certificates
+{% endif %}
