--- a/tests/templates/kuttl/smoke/helm-bitnami-minio-values.yaml.j2
+++ b/tests/templates/kuttl/smoke/helm-bitnami-minio-values.yaml.j2
@@ -12,7 +12,7 @@ extraEnvVars:
 provisioning:
   enabled: true
   buckets:
-    - name: hive
+    - name: trino
   usersExistingSecrets:
     - centralized-minio-users
   resources:
