--- a/tests/templates/kuttl/smoke/00-secrets.yaml.j2
+++ b/tests/templates/kuttl/smoke/00-secrets.yaml.j2
@@ -31,8 +31,8 @@ metadata:
 type: Opaque
 stringData:
   username1: |
-    username=hive
-    password=hivehive
+    username=trino
+    password=trinotrino
     disabled=false
     policies=readwrite,consoleAdmin,diagnostics
     setPolicies=false
