--- a/tests/templates/kuttl/smoke/04-prepare-bucket.yaml.j2
+++ b/tests/templates/kuttl/smoke/04-prepare-bucket.yaml.j2
@@ -4,10 +4,7 @@ kind: TestStep
 commands:
   # give minio enough time to start
   - command: sleep 5
-{% if test_scenario['values']['s3-use-tls'] == 'true' %}
-  - command: kubectl exec -n $NAMESPACE minio-client -- sh -c 'mc --insecure alias set minio https://minio:9000 $$MINIO_SERVER_ACCESS_KEY $$MINIO_SERVER_SECRET_KEY'
-{% else %}
-  - command: kubectl exec -n $NAMESPACE minio-client -- sh -c 'mc --insecure alias set minio http://minio:9000 $$MINIO_SERVER_ACCESS_KEY $$MINIO_SERVER_SECRET_KEY'
-{% endif %}
-  - command: kubectl cp -n $NAMESPACE yellow_tripdata_2021-07.csv minio-client:/tmp
-  - command: kubectl exec -n $NAMESPACE minio-client -- mc --insecure cp /tmp/yellow_tripdata_2021-07.csv minio/trino
+  - script: |
+      POD=$(kubectl -n $NAMESPACE get pod -l app.kubernetes.io/instance=minio -o name | head -n 1 | sed -e 's#pod/##')
+      kubectl cp -n $NAMESPACE yellow_tripdata_2021-07.csv $POD:/tmp
+      kubectl -n $NAMESPACE exec $POD -- mc cp /tmp/yellow_tripdata_2021-07.csv local/trino
