--- a/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
@@ -106,7 +106,7 @@ spec:
     # Even when we start supporting PostgreSQL natively, please leave this in to test the generic connector
     generic:
       connectorName: postgresql
-      properties: # optional
+      properties:
         connection-url:
           value: jdbc:postgresql://postgresql:5432/hive
         connection-user:
