--- a/tests/templates/kuttl/smoke/helm-bitnami-postgresql-values.yaml.j2
+++ b/tests/templates/kuttl/smoke/helm-bitnami-postgresql-values.yaml.j2
@@ -15,6 +15,13 @@ primary:
 {% endif %}
   containerSecurityContext:
     enabled: false
+  resources:
+    requests:
+      memory: "512Mi"
+      cpu: "512m"
+    limits:
+      memory: "512Mi"
+      cpu: "1"
 
 auth:
   username: hive
