--- a/tests/templates/kuttl/authentication/create-trino-cluster.yaml.j2
+++ b/tests/templates/kuttl/authentication/create-trino-cluster.yaml.j2
@@ -2,9 +2,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: trino-with-ldap-bind-secret
+  name: trino-ldap-bind-secret
+  namespace: $NAMESPACE
   labels:
-    secrets.stackable.tech/class: trino-with-ldap-bind
+    secrets.stackable.tech/class: trino-ldap-bind-$NAMESPACE
 stringData:
   user: cn=admin,dc=example,dc=org
   password: admin
@@ -13,24 +14,21 @@ apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCluster
 metadata:
   name: trino
+  namespace: $NAMESPACE
 spec:
   image:
-    productVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[0] }}"
-    stackableVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[1] }}"
+    productVersion: \"{{ test_scenario['values']['trino-latest'].split('-stackable')[0] }}\"
+    stackableVersion: \"{{ test_scenario['values']['trino-latest'].split('-stackable')[1] }}\"
   clusterConfig:
     catalogLabelSelector: {}
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
     vectorAggregatorConfigMapName: vector-aggregator-discovery
 {% endif %}
     authentication:
-      method:
-{% if test_scenario['values']['ldap-use-tls'] == 'false' %}
-        ldap:
-          authenticationClass: ldap-without-tls
-{% else  %}
-        ldap:
-          authenticationClass: ldap-with-tls
-{% endif %}
+      - authenticationClass: password-$NAMESPACE
+      - authenticationClass: password-other-$NAMESPACE
+      - authenticationClass: ldap-$NAMESPACE
+      - authenticationClass: ldap-other-$NAMESPACE
   coordinators:
     config:
       logging:
