--- a/tests/templates/kuttl/resources/10-assert.yaml.j2
+++ b/tests/templates/kuttl/resources/10-assert.yaml.j2
@@ -104,3 +104,37 @@ spec:
   resources:
     requests:
       storage: 4Gi
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: trino-worker-resources-from-pod-overrides
+spec:
+  template:
+    spec:
+      containers:
+        - name: trino
+          resources:
+            requests:
+              cpu: 310m
+              memory: 3Gi
+            limits:
+              cpu: 610m
+              memory: 3Gi
+{% if lookup('env', 'VECTOR_AGGREGATOR') %}
+        - name: vector
+{% endif %}
+status:
+  readyReplicas: 1
+  replicas: 1
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: data-trino-worker-resources-from-pod-overrides-0
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 3Gi
