Update tests and docs

--- a/tests/templates/kuttl/smoke/09-install-opa.yaml.j2
+++ b/tests/templates/kuttl/smoke/09-install-opa.yaml.j2
@@ -33,12 +33,23 @@ data:
     default allow = false
 
     allow {
-      is_admin
+        is_admin
+    }
+    extended[i] {
+        some i
+        input.action.filterResources[i]
+        is_admin
     }
 
     allow {
-      is_bob
-      can_be_accessed_by_bob
+        input.action.operation in ["ExecuteQuery", "AccessCatalog"]
+        is_bob
+    }
+    extended[i] {
+        input.action.operation in ["FilterCatalogs"]
+        some i
+        input.action.filterResources[i]
+        is_bob
     }
 
     is_admin() {
@@ -47,8 +58,4 @@ data:
 
     is_bob() {
       input.context.identity.user == "bob"
-    }
-
-    can_be_accessed_by_bob() {
-      input.action.operation in ["ImpersonateUser", "FilterCatalogs", "AccessCatalog", "ExecuteQuery"]
     }
