--- a/tests/templates/kuttl/smoke/05-install-zookeeper.yaml.j2
+++ b/tests/templates/kuttl/smoke/05-install-zookeeper.yaml.j2
@@ -5,8 +5,7 @@ metadata:
   name: zookeeper
 spec:
   image:
-    productVersion: "{{ test_scenario['values']['zookeeper'].split('-stackable')[0] }}"
-    stackableVersion: "{{ test_scenario['values']['zookeeper'].split('-stackable')[1] }}"
+    productVersion: "{{ test_scenario['values']['zookeeper'] }}"
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
   clusterConfig:
     logging:
