--- a/tests/templates/kuttl/smoke/06-install-hdfs.yaml.j2
+++ b/tests/templates/kuttl/smoke/06-install-hdfs.yaml.j2
@@ -5,8 +5,7 @@ metadata:
   name: hdfs
 spec:
   image:
-    productVersion: "{{ test_scenario['values']['hdfs'].split('-stackable')[0] }}"
-    stackableVersion: "{{ test_scenario['values']['hdfs'].split('-stackable')[1] }}"
+    productVersion: "{{ test_scenario['values']['hdfs'] }}"
   clusterConfig:
     dfsReplication: 1
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
