--- a/tests/templates/kuttl/smoke/08-install-hive.yaml.j2
+++ b/tests/templates/kuttl/smoke/08-install-hive.yaml.j2
@@ -5,8 +5,7 @@ metadata:
   name: hive
 spec:
   image:
-    productVersion: "{{ test_scenario['values']['hive'].split('-stackable')[0] }}"
-    stackableVersion: "{{ test_scenario['values']['hive'].split('-stackable')[1] }}"
+    productVersion: "{{ test_scenario['values']['hive'] }}"
   clusterConfig:
     database:
       connString: jdbc:postgresql://postgresql:5432/hive
