--- a/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
@@ -5,8 +5,7 @@ metadata:
   name: trino
 spec:
   image:
-    productVersion: "{{ test_scenario['values']['trino'].split('-stackable')[0] }}"
-    stackableVersion: "{{ test_scenario['values']['trino'].split('-stackable')[1] }}"
+    productVersion: "{{ test_scenario['values']['trino'] }}"
   clusterConfig:
     catalogLabelSelector:
       matchLabels:
