--- a/tests/templates/kuttl/logging/02-install-trino.yaml.j2
+++ b/tests/templates/kuttl/logging/02-install-trino.yaml.j2
@@ -31,8 +31,7 @@ metadata:
   name: test-trino
 spec:
   image:
-    productVersion: "{{ test_scenario['values']['trino'].split('-stackable')[0] }}"
-    stackableVersion: "{{ test_scenario['values']['trino'].split('-stackable')[1] }}"
+    productVersion: "{{ test_scenario['values']['trino'] }}"
   clusterConfig:
     catalogLabelSelector: {}
     vectorAggregatorConfigMapName: trino-vector-aggregator-discovery
