--- a/tests/templates/kuttl/orphaned-resources/1-install-trino.yaml.j2
+++ b/tests/templates/kuttl/orphaned-resources/1-install-trino.yaml.j2
@@ -5,8 +5,7 @@ metadata:
   name: trino
 spec:
   image:
-    productVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[0] }}"
-    stackableVersion: "{{ test_scenario['values']['trino-latest'].split('-stackable')[1] }}"
+    productVersion: "{{ test_scenario['values']['trino-latest'] }}"
   clusterConfig:
     catalogLabelSelector: {}
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
