--- a/tests/templates/kuttl/logging/trino-vector-aggregator-values.yaml.j2
+++ b/tests/templates/kuttl/logging/trino-vector-aggregator-values.yaml.j2
@@ -20,97 +20,107 @@ customConfig:
       type: vector
       version: "2"
   transforms:
-    automaticLogConfigCoordinatorTrino:
+    filteredAutomaticLogConfigCoordinatorTrino:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-coordinator-automatic-log-config-0" &&
         .container == "trino"
-    automaticLogConfigCoordinatorPwFileUpdater:
+    filteredAutomaticLogConfigCoordinatorPwFileUpdater:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-coordinator-automatic-log-config-0" &&
         .container == "password-file-updater"
-    automaticLogConfigCoordinatorVector:
+    filteredAutomaticLogConfigCoordinatorVector:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-coordinator-automatic-log-config-0" &&
         .container == "vector"
-    automaticLogConfigCoordinatorPrepare:
+    filteredAutomaticLogConfigCoordinatorPrepare:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-coordinator-automatic-log-config-0" &&
         .container == "prepare"
-    automaticLogConfigWorkerTrino:
+    filteredAutomaticLogConfigWorkerTrino:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-worker-automatic-log-config-0" &&
         .container == "trino"
-    automaticLogConfigWorkerVector:
+    filteredAutomaticLogConfigWorkerVector:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-worker-automatic-log-config-0" &&
         .container == "vector"
-    automaticLogConfigWorkerPrepare:
+    filteredAutomaticLogConfigWorkerPrepare:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-worker-automatic-log-config-0" &&
         .container == "prepare"
-    customLogConfigCoordinatorTrino:
+    filteredCustomLogConfigCoordinatorTrino:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-coordinator-custom-log-config-0" &&
         .container == "trino"
-    customLogConfigCoordinatorPwFileUpdater:
+    filteredCustomLogConfigCoordinatorPwFileUpdater:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-coordinator-custom-log-config-0" &&
         .container == "password-file-updater"
-    customLogConfigCoordinatorVector:
+    filteredCustomLogConfigCoordinatorVector:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-coordinator-custom-log-config-0" &&
         .container == "vector"
-    customLogConfigCoordinatorPrepare:
+    filteredCustomLogConfigCoordinatorPrepare:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-coordinator-custom-log-config-0" &&
         .container == "prepare"
-    customLogConfigWorkerTrino:
+    filteredCustomLogConfigWorkerTrino:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-worker-custom-log-config-0" &&
         .container == "trino"
-    customLogConfigWorkerVector:
+    filteredCustomLogConfigWorkerVector:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-worker-custom-log-config-0" &&
         .container == "vector"
-    customLogConfigWorkerPrepare:
+    filteredCustomLogConfigWorkerPrepare:
       type: filter
       inputs: [vector]
       condition: >-
         .pod == "test-trino-worker-custom-log-config-0" &&
         .container == "prepare"
+    filteredInvalidEvents:
+      type: filter
+      inputs: [vector]
+      condition: |-
+        .timestamp == from_unix_timestamp!(0) ||
+        is_null(.level) ||
+        is_null(.logger) ||
+        is_null(.message)
   sinks:
     out:
-      inputs: [automaticLogConfig*, customLogConfig*]
+      inputs: [filtered*]
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
       type: vector
       address: {{ lookup('env', 'VECTOR_AGGREGATOR') }}
       buffer:
+        # Avoid back pressure from VECTOR_AGGREGATOR. The test should
+        # not fail if the aggregator is not available.
         when_full: drop_newest
 {% else %}
       type: blackhole
