set gracefulShutdownTimeout in every test to avoid insufficient cluster resources due to terminating pods.

--- a/tests/templates/kuttl/authentication/create-trino-cluster.yaml.j2
+++ b/tests/templates/kuttl/authentication/create-trino-cluster.yaml.j2
@@ -20,6 +20,7 @@ spec:
     productVersion: "'"{{ test_scenario['values']['trino-latest'] }}"'"
   clusterConfig:
     catalogLabelSelector: {}
+    gracefulShutdownTimeout: 5s
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
     vectorAggregatorConfigMapName: vector-aggregator-discovery
 {% endif %}
