--- a/tests/templates/kuttl/logging/02-install-trino.yaml.j2
+++ b/tests/templates/kuttl/logging/02-install-trino.yaml.j2
@@ -34,7 +34,6 @@ spec:
     productVersion: "{{ test_scenario['values']['trino'] }}"
   clusterConfig:
     catalogLabelSelector: {}
-    gracefulShutdownTimeout: 5s
     vectorAggregatorConfigMapName: trino-vector-aggregator-discovery
     # in order to add the password-file-updater container
     authentication:
@@ -85,6 +84,8 @@ spec:
                 custom:
                   configMap: trino-log-config
   workers:
+    config:
+      gracefulShutdownTimeout: 5s # Let the test run faster
     roleGroups:
       automatic-log-config:
         replicas: 1
