--- a/tests/templates/kuttl/cluster-operation/30-pause-trino.yaml.j2
+++ b/tests/templates/kuttl/cluster-operation/30-pause-trino.yaml.j2
@@ -8,7 +8,6 @@ spec:
     productVersion: "{{ test_scenario['values']['trino-latest'] }}"
   clusterConfig:
     catalogLabelSelector: {}
-    gracefulShutdownTimeout: 5s
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
     vectorAggregatorConfigMapName: vector-aggregator-discovery
 {% endif %}
@@ -24,6 +23,7 @@ spec:
         replicas: 1
   workers:
     config:
+      gracefulShutdownTimeout: 5s # Let the test run faster
       logging:
         enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
     roleGroups:
