--- a/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
@@ -6,6 +6,7 @@ metadata:
 spec:
   image:
     productVersion: "{{ test_scenario['values']['trino'] }}"
+    pullPolicy: IfNotPresent
   clusterConfig:
     catalogLabelSelector:
       matchLabels:
